# corebc-rs

./: CHANGELOG-OLD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/scripts/: install_test_binaries.sh
.github/workflows/: ci.yml
book/: SUMMARY.md
book/contracts/: contracts.md  deploy-anvil.md
book/getting-started/: connect_to_an_ethereum_node.md  start_a_new_project.md
book/middleware/: gas-escalator.md
book/providers/: advanced_usage.md  http.md  ipc.md  providers.md  ws.md
corebc/: Cargo.toml
corebc-addressbook/: Cargo.toml  README.md
corebc-addressbook/src/: lib.rs
corebc-addressbook/src/contracts/: contracts.json
corebc-blockindex/: Cargo.toml  README.md
corebc-blockindex/src/: account.rs  block.rs  contract.rs  errors.rs  lib.rs  source_tree.rs  transaction.rs  utils.rs  verify.rs
corebc-blockindex/tests/it/: account.rs  block.rs  main.rs  transaction.rs  version.rs
corebc-contract/: Cargo.toml  README.md
corebc-contract/corebc-contract-abigen/: Cargo.toml  Greeter.sol  README.md
corebc-contract/corebc-contract-abigen/src/: contract.rs  lib.rs  multi.rs  util.rs
corebc-contract/corebc-contract-abigen/src/contract/: errors.rs  events.rs  methods.rs  structs.rs  types.rs
corebc-contract/corebc-contract-abigen/src/source/: mod.rs  online.rs
corebc-contract/corebc-contract-derive/: Cargo.toml  README.md
corebc-contract/corebc-contract-derive/src/: abi_ty.rs  abigen.rs  call.rs  calllike.rs  cip712.rs  codec.rs  display.rs  eip712.rs  error.rs  event.rs  lib.rs  utils.rs
corebc-contract/src/: base.rs  call.rs  contract.rs  error.rs  event.rs  factory.rs  lib.rs  log.rs  stream.rs
corebc-contract/src/multicall/: constants.rs  contract.rs  error.rs  mod.rs  multicall_abi.json
corebc-contract/tests/it/: abigen.rs  cip712.rs  common.rs  contract.rs  contract_call.rs  derive.rs  eip712.rs  main.rs
corebc-contract/tests/solidity-contracts/: DeriveEip712Test.json  DeriveEip712Test.sol  LargeStructs.json  Multicall.sol
corebc-core/: Cargo.toml  README.md
corebc-core/src/: lib.rs
corebc-core/src/abi/: mod.rs  packed.rs  raw.rs  struct_def.rs
corebc-core/src/abi/human_readable/: lexer.rs  mod.rs
corebc-core/src/macros/: ethers_crate.rs
corebc-core/src/types/: block.rs  bytes.rs  chain.rs  ens.rs  fee.rs  filter.rs  i256.rs  log.rs  mod.rs  network.rs  opcode.rs  other.rs  serde_helpers.rs  signature.rs  syncing.rs  txpool.rs
corebc-core/src/types/trace/: example-trace-str.rs  example-traces-str.rs  filter.rs  geth.rs
corebc-core/src/types/trace/geth/: call.rs  four_byte.rs  noop.rs  pre_state.rs
corebc-core/src/types/trace/geth/test_data/call_tracer/: default.json  legacy.json  only_top_call.json  with_log.json
corebc-core/src/types/trace/geth/test_data/pre_state_tracer/: diff_mode.json  legacy.json
corebc-core/src/types/transaction/: cip712.rs  eip1559.rs  eip2718.rs  eip2930.rs  eip712.rs  mod.rs  request.rs  response.rs
corebc-core/src/utils/: anvil.rs  ganache.rs  genesis.rs  geth.rs  gocore.rs  hash.rs  mod.rs  shuttle.rs  units.rs
corebc-core/testdata/: solc-obj.json
corebc-etherscan/: Cargo.toml  README.md
corebc-etherscan/src/: account.rs  contract.rs  errors.rs  gas.rs  lib.rs  utils.rs  verify.rs
corebc-etherscan/tests/it/: account.rs  contract.rs  gas.rs  main.rs  transaction.rs  verify.rs  version.rs
corebc-keystore/: CHANGELOG.md  Cargo.toml
corebc-keystore/src/: error.rs  keystore.rs  lib.rs  utils.rs
corebc-keystore/tests/: mod.rs
corebc-keystore/tests/test-keys/: key-scrypt.json
corebc-middleware/: Cargo.toml  README.md
corebc-middleware/src/: builder.rs  lib.rs  nonce_manager.rs  policy.rs  signer.rs
corebc-middleware/src/energy_escalator/: geometric.rs  linear.rs  mod.rs
corebc-middleware/src/energy_oracle/: cache.rs  etherchain.rs  mod.rs  (+3 more)
corebc-providers/: Cargo.toml  README.md
corebc-providers/src/: lib.rs  middleware.rs  utils.rs
corebc-signers/: Cargo.toml  README.md
corebc-signers/src/: lib.rs
corebc-solc/: Cargo.toml  README.md
corebc-solc/benches/: compile_many.rs  read_all.rs
corebc-solc/src/: cache.rs  config.rs  lib.rs  utils.rs
corebc-solc/test-data/: solidity-files-cache.json
corebc-solc/tests/: mocked.rs  project.rs
corebc-ylem/: Cargo.toml  README.md
corebc-ylem/benches/: compile_many.rs  read_all.rs
corebc-ylem/cache/: solidity-files-cache.json
corebc-ylem/src/: buildinfo.rs  cache.rs  config.rs  error.rs  filter.rs  hh.rs  lib.rs  remappings.rs  utils.rs
corebc-ylem/test-data/: library-remapping-in-2.json  library-remapping-in.json  solidity-files-cache.json
corebc-ylem/tests/: mocked.rs  project.rs
corebc/src/: lib.rs
ethers/: Cargo.toml
ethers-addressbook/: Cargo.toml
ethers-addressbook/src/: lib.rs
ethers-contract/: Cargo.toml  README.md
ethers-contract/ethers-contract-abigen/: Cargo.toml
ethers-contract/ethers-contract-derive/: Cargo.toml
ethers-contract/src/: base.rs  call.rs  contract.rs  error.rs  event.rs  factory.rs  lib.rs  stream.rs
ethers-core/: Cargo.toml  README.md
ethers-core/testdata/: proof.json
ethers-etherscan/: Cargo.toml
ethers-middleware/: Cargo.toml
ethers-providers/: Cargo.toml
ethers-signers/: Cargo.toml
ethers-solc/: Cargo.toml
examples/: README.md
examples/anvil/: Cargo.toml
examples/big-numbers/: Cargo.toml  README.md
examples/contracts/: Cargo.toml  README.md
examples/contracts/examples/: abigen.rs  compile.rs  deploy_anvil.rs  deploy_from_abi_and_bytecode.rs  deploy_from_solidity.rs  deploy_moonbeam.rs  events.rs  events_with_meta.rs  methods_abi_and_structs.rs
examples/events/: Cargo.toml
examples/gocore/: Cargo.toml
examples/middleware/: Cargo.toml
examples/providers/: Cargo.toml
examples/queries/: Cargo.toml
examples/subscriptions/: Cargo.toml
examples/transactions/: Cargo.toml
examples/wallets/: Cargo.toml
examples/wallets/examples/: ledger.rs  local_signer.rs  mnemonic.rs  permit_hash.rs  sign_message.rs  trezor.rs  yubi.rs
examples/wasm/: Cargo.toml  README.md  index.js  package.json
testdata/uniswap/: UniswapExchange.sol
(+250 files in other folders)
