[package]
name = "corebc-blockindex"
readme = "README.md"
description = "Bindings for the blockindex.net web API"
keywords = ["crypto", "core", "core-coin", "web3", "blockindex"]

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
corebc-core.workspace = true

corebc-ylem = { workspace = true, optional = true }

reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
semver.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# NOTE: this enables wasm compatibility for getrandom indirectly
getrandom.workspace = true

[dev-dependencies]
corebc-ylem.workspace = true

tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serial_test = "2.0.0"
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
default = ["rustls"]
openssl = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]

corebc-ylem = ["dep:corebc-ylem"]
corebc-full = ["corebc-ylem?/full"]
corebc-tests = ["corebc-ylem?/tests"]