[package]
name = "corebc-contract"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "Type-safe abstractions for interacting with Ethereum smart contracts"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
corebc-providers.workspace = true
corebc-core.workspace = true

serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
pin-project.workspace = true
thiserror.workspace = true
once_cell.workspace = true
hex.workspace = true

# abigen
corebc-contract-abigen = { workspace = true, optional = true }
corebc-contract-derive = { workspace = true, optional = true }

[dev-dependencies]
corebc-signers.workspace = true
corebc-ylem.workspace = true
corebc-providers = { workspace = true, features = ["ws"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["abigen"]

abigen-offline = ["corebc-contract-abigen", "corebc-contract-derive"]
abigen = ["abigen-offline", "corebc-contract-abigen/online"]

celo = ["legacy", "corebc-core/celo", "corebc-providers/celo"]
legacy = []

rustls = ["corebc-contract-abigen/rustls"]
openssl = ["corebc-contract-abigen/openssl"]

# Deprecated
eip712 = []
