[package]
name = "corebc-core"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "README.md"
description = "Ethereum data types, cryptography and utilities"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[dependencies]
# abi
open-fastrlp = { git = "https://github.com/Kuly14/open-fastrlp", version = "*", features = ["std", "derive", "ethereum-types"] }
rlp = { git = "https://github.com/core-coin/core-common", version = "0.5", default-features = true, features = ["derive"] }
arrayvec = { version = "0.7", default-features = false }
ethabi.workspace = true

# crypto
k256 = { workspace = true, features = ["ecdsa", "std"] }
libgoldilocks = { workspace = true }
# tiny-keccak.workspace = true
rand.workspace = true
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

# misc
chrono = { version = "0.4", default-features = false }
serde.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision"]}
thiserror.workspace = true
bytes = { workspace = true, features = ["serde"] }
hex.workspace = true
once_cell = { workspace = true, optional = true }
unicode-xid = "0.2"
strum = { version = "0.24", features = ["derive"] }
num_enum = "0.6"

# macros feature enabled dependencies
cargo_metadata = { version = "0.15.4", optional = true }
syn = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tempfile.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# NOTE: this enables wasm compatibility for getrandom indirectly
getrandom.workspace = true

[dev-dependencies]
bincode = { version = "1.3.3", default-features = false }
once_cell.workspace = true
hex-literal.workspace = true
rand.workspace = true

[features]
legacy = []
macros = ["syn", "cargo_metadata", "once_cell"]

# Deprecated
cip712 = []
