[package]
name = "corebc-keystore"
description = "A minimalist library to interact with encrypted JSON keystores"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
aes = "0.8.0"
ctr = "0.9.0"
digest = "0.10.0"
hex = "0.4.2"
hmac = "0.12.0"
pbkdf2 = { version = "0.12", default-features = false }
rand = "0.8.5"
scrypt = { version = "0.10.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
sha3 = "0.10.0"
thiserror = { version = "1.0.22", default-features = false }
uuid = { version = "1.0", features = ["serde", "v4"] }
tiny-keccak = {version = "2.0.2", features = ["sha3"]} 

libgoldilocks.workspace = true
corebc-core.workspace = true
ethabi.workspace = true
