[package]
name = "corebc"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "../README.md"
description = "A complete Ethereum and Rust library"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[features]
default = ["abigen", "rustls"]



# individual features per sub-crate
## providers
ws = ["corebc-providers/ws"]
legacy-ws = ["corebc-providers/legacy-ws"]
ipc = ["corebc-providers/ipc"]
rustls = [
    "corebc-middleware/rustls",
    "corebc-providers/rustls",
    "corebc-blockindex/rustls",
    "corebc-contract/rustls",
    "corebc-ylem?/rustls",
]
openssl = [
    "corebc-middleware/openssl",
    "corebc-providers/openssl",
    "corebc-blockindex/openssl",
    "corebc-contract/openssl",
    "corebc-ylem?/openssl",
]
dev-rpc = ["corebc-providers/dev-rpc"]
## signers
ledger = ["corebc-signers/ledger"]
trezor = ["corebc-signers/trezor"]
yubi = ["corebc-signers/yubi"]
## contracts
abigen = ["corebc-contract/abigen"]
### abigen without reqwest
abigen-offline = ["corebc-contract/abigen-offline"]

# corebc-ylem
corebc-ylem = ["dep:corebc-ylem", "corebc-blockindex/corebc-ylem"]
ylem-full = ["corebc-ylem?/full"]
ylem-tests = ["corebc-ylem?/tests"]

# Deprecated
ylem-sha2-asm = []
cip712 = []

[dependencies]
corebc-addressbook.workspace = true
corebc-contract.workspace = true
corebc-core.workspace = true
corebc-blockindex.workspace = true
corebc-middleware.workspace = true
corebc-providers.workspace = true
corebc-signers.workspace = true
corebc-keystore.workspace = true
corebc-ylem = { workspace = true, optional = true }

