[package]
name = "ethers"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
readme = "../README.md"
description = "A complete Ethereum and Celo Rust library"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true

[features]
default = ["abigen", "rustls"]

celo = [
    "corebc-core/celo",
    "corebc-providers/celo",
    "corebc-signers/celo",
    "ethers-contract/celo",
    "ethers-middleware/celo",
    "legacy",
]

legacy = ["corebc-core/legacy", "ethers-contract/legacy"]

# individual features per sub-crate
## providers
ws = ["corebc-providers/ws"]
legacy-ws = ["corebc-providers/legacy-ws"]
ipc = ["corebc-providers/ipc"]
rustls = [
    "ethers-middleware/rustls",
    "corebc-providers/rustls",
    "ethers-etherscan/rustls",
    "ethers-contract/rustls",
    "ethers-solc/rustls",
]
openssl = [
    "ethers-middleware/openssl",
    "corebc-providers/openssl",
    "ethers-etherscan/openssl",
    "ethers-contract/openssl",
    "ethers-solc/openssl",
]
dev-rpc = ["corebc-providers/dev-rpc"]
## signers
ledger = ["corebc-signers/ledger"]
trezor = ["corebc-signers/trezor"]
yubi = ["corebc-signers/yubi"]
## contracts
abigen = ["ethers-contract/abigen"]
### abigen without reqwest
abigen-offline = ["ethers-contract/abigen-offline"]
## solc
solc-full = ["ethers-solc/full"]
solc-tests = ["ethers-solc/tests"]

# Deprecated
solc-sha2-asm = []
eip712 = []

[dependencies]
ethers-addressbook.workspace = true
ethers-contract.workspace = true
corebc-core.workspace = true
ethers-etherscan = { workspace = true, features = ["ethers-solc"] }
ethers-middleware.workspace = true
corebc-providers.workspace = true
corebc-signers.workspace = true
ethers-solc.workspace = true

[dev-dependencies]
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
ethers-contract.workspace = true
corebc-providers = { workspace = true, features = ["rustls"] } # allow https connections
ethers-solc = { workspace = true, features = ["svm-solc"] }
