[package]
name = "examples-wallets"
version = "0.0.0"
publish = false
authors = ["Andrea Simeoni <andreasimeoni84@gmail.com>"]

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
default = ["ledger", "trezor", "yubi"]
ledger = ["corebc/ledger"]
trezor = ["corebc/trezor"]
yubi = ["corebc/yubi"]

[dev-dependencies]
corebc = { workspace = true, features = ["abigen", "ws", "rustls"] }

tokio = { workspace = true, features = ["macros"] }

serde.workspace = true
serde_json.workspace = true

eyre.workspace = true
